# PLTHook

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/enjoy/plthook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  memory_hook_jni.cpp  native-lib.cpp  test.h
app/src/main/cpp/hook/: CMakeLists.txt  elf_hook.cpp  elf_hook.h  elf_jni.cpp  elf_util.cpp  elf_util.h
app/src/main/cpp/xhook/: CMakeLists.txt  xh_elf.c
app/src/main/java/com/enjoy/plthook/: MainActivity.java  PLTHook.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/enjoy/plthook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
